crates/ty_python_semantic/resources/mdtest/snapshots/for.md_-_For_loops_-_Possibly_invalid_`__…_(6388761c90a0555c).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---
---
mdtest name: for.md - For loops - Possibly invalid `__iter__` methods
mdtest path: crates/ty_python_semantic/resources/mdtest/loops/for.md
---

# Python source files

## mdtest_snippet.py

```
 1 | from typing_extensions import reveal_type
 2 | 
 3 | class Iterator:
 4 |     def __next__(self) -> int:
 5 |         return 42
 6 | 
 7 | def _(flag: bool):
 8 |     class Iterable1:
 9 |         if flag:
10 |             def __iter__(self) -> Iterator:
11 |                 return Iterator()
12 |         else:
13 |             def __iter__(self, invalid_extra_arg) -> Iterator:
14 |                 return Iterator()
15 | 
16 |     # error: [not-iterable]
17 |     for x in Iterable1():
18 |         reveal_type(x)  # revealed: int
19 | 
20 |     class Iterable2:
21 |         if flag:
22 |             def __iter__(self) -> Iterator:
23 |                 return Iterator()
24 |         else:
25 |             __iter__: None = None
26 | 
27 |     # error: [not-iterable]
28 |     for x in Iterable2():
29 |         # TODO: `int` would probably be better here:
30 |         reveal_type(x)  # revealed: int | Unknown
```

# Diagnostics

```
error[not-iterable]: Object of type `Iterable1` may not be iterable
  --> src/mdtest_snippet.py:17:14
   |
16 |     # error: [not-iterable]
17 |     for x in Iterable1():
   |              ^^^^^^^^^^^
18 |         reveal_type(x)  # revealed: int
   |
info: Its `__iter__` method may have an invalid signature
info: Type of `__iter__` is `(bound method Iterable1.__iter__() -> Iterator) | (bound method Iterable1.__iter__(invalid_extra_arg) -> Iterator)`
info: Expected signature for `__iter__` is `def __iter__(self): ...`
info: rule `not-iterable` is enabled by default

```

```
info[revealed-type]: Revealed type
  --> src/mdtest_snippet.py:18:21
   |
16 |     # error: [not-iterable]
17 |     for x in Iterable1():
18 |         reveal_type(x)  # revealed: int
   |                     ^ `int`
19 |
20 |     class Iterable2:
   |

```

```
error[not-iterable]: Object of type `Iterable2` may not be iterable
  --> src/mdtest_snippet.py:28:14
   |
27 |     # error: [not-iterable]
28 |     for x in Iterable2():
   |              ^^^^^^^^^^^
29 |         # TODO: `int` would probably be better here:
30 |         reveal_type(x)  # revealed: int | Unknown
   |
info: Its `__iter__` attribute (with type `(bound method Iterable2.__iter__() -> Iterator) | None`) may not be callable
info: rule `not-iterable` is enabled by default

```

```
info[revealed-type]: Revealed type
  --> src/mdtest_snippet.py:30:21
   |
28 |     for x in Iterable2():
29 |         # TODO: `int` would probably be better here:
30 |         reveal_type(x)  # revealed: int | Unknown
   |                     ^ `int | Unknown`
   |

```
